--- a/glossolalia.html
+++ b/glossolalia.html
@@ -95,7 +95,7 @@
 <main>
     <h1>Glossolalia: open-source language exercises</h1>
   <p>
-    Welcome to Glossolalia, my passion project dedicated to creating and sharing open-source language-learning exercises. I believe that language learning should be freely available to all, and while these exercises are not a substitute for formal education, it is my hope that they will serve as supportive tools for those who, like me, loved doing grammar exercises in my high school language classes.
+    Welcome to Glossolalia, my passion project dedicated to creating and sharing open-source language-learning exercises. I believe that language learning should be freely available to all, and while these exercises are not a substitute for formal education, it is my hope that they will serve as supportive tools for language learners. Especially for those who, like me, loved doing grammar exercises in their high school language classes 💜.
   </p>
     <h2>Available Exercises</h2>
     <!-- ==========================================================
