--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <p>
     Salutations! I’m Brandon, but most people call me Bran. I am a 6th year PhD Candidate in Linguistics at Stanford University, where I'm advised by Robert Hawkins, Rob Podesva, and Meghan Sumner. My dissertation offers an account of referring expression processing and production that integrates the often competing cognitive and social pressures that underpin these processes. I have also collaborated with various colleagues on research projects in sociophonetics, morphosyntax, and computational linguistics, often as an experimentalist and data analyst; I am very passionate about bringing large-scale behavioral data to bear on theoretical questions.
     <br><br>
-    In my free time, I enjoy video games, bar trivia, taking my dog to the park, and building <a href="https://glossolalia.app">Glossolalia</a>, an open-source repository of language-learning exercises.
+    In my free time, I enjoy video games, bar trivia, taking my dog to the park, and building <a href="glossolalia.html">Glossolalia</a>, an open-source repository of language-learning exercises.
   </p>
 </main>
 
