--- a/publications.html
+++ b/publications.html
@@ -92,7 +92,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="publications.html">Publications</a>
-    <a href="https://glossolalia.app">Glossolalia</a>
+    <a href="glossolalia.html">Glossolalia</a>
   </nav>
 </header>
 
