--- a/glossolalia.html
+++ b/glossolalia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<script src="glossolalia/data/nounVocab.js"></script>
+<script src="./glossolalia/data/nounVocab.js"></script>
 <title>Bran[don] Papineau</title>
 <style>
   /* --- Inserted Bran's Theme Styles --- */
@@ -103,7 +103,7 @@
      ========================================================== -->
 <div id="menuScreen">
     <h3>Memory Game</h3>
-    <p>Choose your languages and topic:</p>
+    <p>Choose your languages and topic (this will open a new window):</p>
   
     <label>Base Language:</label>
     <select id="baseLang"></select>
@@ -140,7 +140,7 @@
 
 <script>
     /* ==========================================================
-    UI INITIALIZATION
+    UI INITIALIZATION FOR MEMORY GAME
     ========================================================== */
     
     const nounVocab = nounVocabData; // from nounVocab.js
