--- a/glossolalia.html
+++ b/glossolalia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<script src="./glossolalia/data/nounVocab.js"></script>
+<script src="./glossolalia2/data/nounVocab.js"></script>
 <title>Bran[don] Papineau</title>
 <style>
   /* --- Inserted Bran's Theme Styles --- */
@@ -88,7 +88,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="publications.html">Publications</a>
-    <a href="https://glossolalia.app">Glossolalia</a>
+    <a href="glossolalia.html">Glossolalia</a>
   </nav>
 </header>
 
