fixed broken link

--- a/publications.html
+++ b/publications.html
@@ -101,12 +101,12 @@
     <h1> Publications </h1>
     <h3> Most Recent First  </h3>
   <p>
-    <em>In press | </em> Podesva, R., Hernandez, A., <strong>Papineau, B.</strong>, Tano, M., Velásquez, A. R., & Zhang, H., <span style="color: #8D6A9F">(DH)ere’s more than one way to strengthen a fricative: A social meaning approach to ethnic variation in the phonetic realization of the voiced interdental fricative</span>. <em>Journal of English Linguistics</em>.<br><br>
+    <em>In press | </em> Podesva, R., Hernández, A., <strong>Papineau, B.</strong>, Tano, M., Velásquez, A. R., & Zhang, H., <span style="color: #8D6A9F">(DH)ere’s more than one way to strengthen a fricative: A social meaning approach to ethnic variation in the phonetic realization of the voiced interdental fricative</span>. <em>Journal of English Linguistics</em>.<br><br>
     <strong>Papineau, B.</strong> & Degen, J. 2024. <span style="color:#8D6A9F">'Biological Males' and 'Trans(gender) Women': Social Considerations in the Production of Referring Expressions</span>. <em>Proceedings of the Annual Meeting of the Cognitive Science Society</em> 46. [<a href="publications/Papineau&Degen2024CogSci.pdf">pdf</a>]<br><br>
     Holtz, A. & <strong>Papineau, B</strong>. 2024. <span style="color:#8D6A9F">Examining the female-talker default in experimental language acquisition research</span>. <em>Infant and Child Development</em> 33(1). [<a href="publications/Holtz&Papineau2025JICD.pdf">pdf</a>]<br><br>
     D’Oosterlinck, K., Bitew, SK., <strong>Papineau, B.</strong>, Potts, C., Demeester, T., Develder, C. 2023. 🦅 <span style="color: #8D6A9F">CAW-coref: Conjunction-Aware Word-level Coreference Resolution</span>. Proceedings of The Sixth Workshop on Computational Models of Reference, Anaphora and Coreference (CRAC 2023). [<a href="publications/DOosterlinckEtAl2023CRAC.pdf">pdf</a>] <br><br>
     <strong>Papineau, B</strong>., Podesva, R., Degen, J. 2024. <span style="color:#8D6A9F">'Sally the Congressperson': The Role of Individual Ideology on the Processing and Production of English Gender-Neutral Role Nouns</span>. <em>Proceedings of the Annual Meeting of the Cognitive Science Society</em> 44. [<a href="publications/PapineauEtAl2022CogSci.pdf">pdf</a>]<br><br>
-    <strong>Papineau, B.</strong> 2020. <span style="color:#8D6A9F">'Hooked on Celebri/ɾ/y': Intervocalic /t/ in the speech and song of Nina Nesbitt</span>. <em>Lifespans</em>. [<a href="publications/Papineau2020.pdf">pdf</a>]<br><br>
+    <strong>Papineau, B.</strong> 2020. <span style="color:#8D6A9F">'Hooked on Celebri/ɾ/y': Intervocalic /t/ in the speech and song of Nina Nesbitt</span>. <em>Lifespans</em>. [<a href="publications/Papineau2020Lifespans.pdf">pdf</a>]<br><br>
   </p>
 </main>
 
