gbpc page title fix

--- a/gingerbreadperson.html
+++ b/gingerbreadperson.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bran[don] Papineau</title>
+<title>The Gingerbread Person Corpus</title>
 <style>
   /* --- Inserted Bran's Theme Styles --- */
   body {
